# cognite-data-model

./: .gitignore  .pre-commit-config.yaml  README.md  auth.py  bootstrap.py  data.yaml  handle.py  main.py  pyproject.toml  utils.py
